raffia/tests/error/scss/invalid-map-key.snap
---
source: raffia/tests/error.rs
---
error: expect token `:`, but `,` received
  ┌─ invalid-map-key.scss:1:16
  │
1 │ $id: inspect((a,b:c)...)
  │                ^


